--- a/Workbooks/RepeatWorkflow_newPanel_time_course.Rmd
+++ b/Workbooks/RepeatWorkflow_newPanel_time_course.Rmd
@@ -33,6 +33,7 @@ library(Seurat)
 library(dplyr) 
 library(ggplot2)
 library(CelltypeR)
+library(flowCore)
 
 ```
 
@@ -46,29 +47,30 @@ Here we have
 
 ```{r}
 
-input_path <- "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/FlowDataFiles/9MBO"
-output_path <- "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/testingLibrary/"
+input_path <- "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/TimeCourseAIW/LiveCells"
+output_path <- "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/TimeCourseAIW/Analysis/"
 
 # 1.a Read in FlowJo Files 
 
-# In Figure 3 downsample to 9000 where possible
-# Here downsample to 1000 to speed up computation
-flowset <- fsc_to_fs(input_path, downsample = 1000)
+# down sample to take cells from each of 4 time points and 4 replicates
+flowset <- fsc_to_fs(input_path, downsample = 2000)
 # down sample can be a number, 'none' or 'min'
 
 # look at file names and rename with shorter sample names
+sampleNames(flowset) # function in flowCore
 
+```
+
+
+Rename samples with shorter names
+
+```{r}
+sampleNames(flowset) <- sampleNames(flowset) <- c("AIW_150_R1","AIW_150_R2","AIW_150_R3","AIW_150_R4",
+  "AIW_30_R1","AIW_30_R2","AIW_30_R3","AIW_30_R4",
+  "AIW_60_R1","AIW_60_R2","AIW_60_R3","AIW_60_R4",
+  "AIW_100_R1","AIW_100_R2","AIW_100_R3","AIW_100_R4"
+                                                  )
 sampleNames(flowset)
-sampleNames(flowset) <- sampleNames(flowset) <- c("3450_0306","AIW002_0306","AJG001C_0306","3450_0317A","AIW002_0317A","AJG001C_0317A","3450_0317B","AIW002_0317B","AJG001C_0317B")
-sampleNames(flowset)
-
-
-# if we want to save the flowset object now we can 
-# this would be read back in with flowset 
-# 
-
-
-
 ```
 
 Harmonize data to remove batch or technical variation
@@ -87,20 +89,26 @@ flowset_biexp <- harmonize(flowset, processing = 'biexp')
 
 # we need to enter the column index for which peaks to align, the alignment for one or two peaks is not the same. 
 #plotdensity_flowset(flowset)
-#plotdensity_flowset(flowset_biexp) # to see the peaks
+
+p1 <- plotdensity_flowset(flowset_biexp) # to see the peaks
+p1
+# if there are two peaks assign as two peaks and one peak as one in the code chunk below
 
 flowset_align <- harmonize(flowset, processing = 'align', 
-                           two_peaks = c(7:20),
-                       one_peak = c(1:6,21), threshold = 0.01)
+                           two_peaks = c(9:11,15,17:21,25:42),
+                       one_peak = c(1:8,12:14,16,24,43), threshold = 0.01)
 
 flowset_retro <- harmonize(flowset, processing = 'retro', 
-                           two_peaks = c(7:20),
-                       one_peak = c(1:6,21), threshold = 0.01)
+                           two_peaks = c(9:11,15,17:21,25:42),
+                       one_peak = c(1:8,12:14,16,24,43), threshold = 0.01)
 ### test again later without running library(flowCore)
 df <- flowset_to_csv(flowset_retro)
 
+head(df)
+# here we have 3 measures of each channel - we want the area measure and only this should have been selected.
+# Select the first value from 
 
-
+colnames(df)
 
 ```
 
@@ -121,14 +129,17 @@ plotdensity_flowset(flowset_align)
 
 ```{r}
 
-# the function make_seu will take in the df of expression and Antibody/Marker list as a vector and create a seurat object. Values are scaled. Marker expression will be in the "RNA" slot. PCA is calculated using AB vector as the features 
 
+
+# the function make_seu will take in the df of expression and Antibody/Marker list as a vector and create a seurat object. Values are scaled. Marker expression will be in the "RNA" slot. PCA is calculated using AB vector as the features 
 # make sure to always keep the same antibody order or your labels will not be correct
 
-
 # antibody features in order to appear on the plots
-AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
-seu <- make_seu(df, AB_vector = AB)
+AB <- c("TH","CD24","CD56","CD29","CD15","CD184","CD133","SSEA4","CD44","CD49f","CD140a")
+
+df_select <- df %>% select(c("TH","CD24","CD56","CD29","CD15","CD184","CD133","SSEA4","CD44","CD49f","CD140a","Sample"))
+
+seu <- make_seu(df_select, AB_vector = AB)
 
 
 ```
@@ -138,154 +149,39 @@ You can save the data frame and seurat object for later
 
 
 # to save the df for later
-write.csv(df, paste(output_path,"df1000.csv", sep = ""))
+write.csv(df, paste(output_path,"df2000Timecourse4.csv", sep = ""))
 
 # save the seurat object
-saveRDS(seu, paste(output_path, "seuratObject1000.csv", sep = ""))
+saveRDS(seu, paste(output_path, "seuratObjectTimecourseAIW_4.RDS", sep = ""))
 
 
 
 ```
-
-
-Read in the csv of the flow files processed and the seurat object
-
-```{r}
-df.input <- read.csv(paste(output_path, "df1000.csv", sep = ""))
-
-seu <- readRDS(paste(output_path, "seuratObject1000.csv", sep = ""))
-
-```
-
-# Test out clustering methods
-1. Flowsom - requires the data frame from above
-2. Phenograph - requires Seurat object from above
-3. Louvain via Seurat - requires Seurat object from above
-
-To run intrinsic statistics we need the data frame for all clustering methods. 
-1. Silhouette score: -1 to 1.A value near -1 indicates a poor quality of the clusters a value near 1 indicates a good quality of the clusters.
-2. Calinski-Harabasz index: higher values indicate better quality clusters.
-3. Davies-Bouldin index: lower values indicate better clusters.  The min value is 0. 
-
-Note that even with only 1000 cells these processes are slow and if you want to test larger data sets use base R and HPC. 
-
-
-Test Flowsom
+Check out the data object
 
 ```{r}
 
-library(clustree)
-
-# the lowest flow_k to use is 3
-
-flow.test <- explore_param(input = seu,
-                          cluster_method = 'flowsom', 
-                          df_input= df.input, 
-                          flow_k = c(5,10,15,20),
-                          pheno_lou_kn = NULL, 
-                          lou_resolution = NULL, 
-                          run.plot = TRUE, 
-                          run.stats = TRUE, 
-                          save_to = NULL)
-
-```
-Notice in the UMAPs and heatmaps a large amount of cells are all in one or two clusters and small amounts of cells going into small clusters.  This isn't good for us to label cell types. 
-
-```{r}
-# Look at the intrinsic statistics
-flow.test[[1]]
-
-```
-
-The statistics indicate that the fewer the lowest K value has the best quality clusters. 
-
-
-
-Test Phenograph clustering
-
-```{r}
-
-pheno.test <-  explore_param(seu, #for phenograph and louvain only
-                          cluster_method = 'phenograph', #take 1 cluster method
-                          df_input= df.input, #needed  if input "flowsom"
-                          flow_k = NULL, #k for flowsom
-                          pheno_lou_kn = c(150,300,500), #kn for phenograph or louvain
-                          lou_resolution = NULL, #resolution for louvain
-                          run.plot = TRUE, #print if run
-                          run.stats = TRUE, #print and return if run
-                          save_to = NULL)
-
-## clustree in phenograph doesn't make sense but I've included it to see it anyway
-
-
+RidgePlot(seu, features = AB, log = TRUE)
+DimPlot(seu, group.by = "Sample")
 
 ```
 
 
-```{r}
-
-# look at the intrinsic stats table
-pheno.test[[1]]
-
-
-```
-The silhouette score and DBI are best for fewer kn = 500 but the CHI is best for kn = 300. The stats on contradicting.
-
-
-
-Test Louvain clustering
+# Cluster
 
 ```{r}
-
-# for best clustree visualization include resolution 0
-
-lou.test <- explore_param(input = seu, #for phenograph and louvain only
+# note the dimensions (number of PC to include needs to be one less than the number in the antibody panel)
+explore_param(input = seu, 
                           cluster_method = "louvain", 
                           df_input = df.input, 
                           flow_k = NULL, 
-                          pheno_lou_kn = c(60, 200), 
-                          lou_resolution = c(0,0.25,0.5,0.8), 
+                          pheno_lou_kn = c(80,120,200), 
+                          lou_resolution = c(0.6), 
+                          pcdim = 1:10,
                           run.plot = TRUE, 
-                          run.stats = TRUE, 
+                          run.stats = FALSE, 
                           save_to = NULL)
-
-
-
-```
-
-```{r}
-lou.test[[1]]
-
-```
-The statistic differ for best clustering. 
-Overall the intrinsic statistics are not helpful for this data for choosing cluster conditions.  We decided to use the heatmaps and UMAPS for clusters that look best for annotation. We want clusters that are distinct from eachother on the UMAP and have clear markers on the heatmap. We then used the RAND Index to determine the final cluster conditions. 
-
-
-Check cluster stability - best resolution/cluster number/k value by calculating RAND Index and STD of cluster number
-
-```{r}
-
-RI <- clust_stability(input = seu,
-                       resolutions = c(0.1,0.25,0.5,0.8,1),
-                       kn = 60,
-                       n = 5, #number of iterations
-                       save_to = NULL)
-
-# it is recommended to run n= 100, however I ran only 5 here because it is long to calculate
-
-
-```
-
-```{r}
- 
-#Look at the RI results
-plot_randindex(
-    rdf = RI$list,
-    cp = c("orange", "violet"),
-    view = c(0, 1) #zoom in x axis, this does not changes scales, just the viewable sections
-)
-
-# The RAND index indicates if cells are put into the same cluster each time the clustering is repeated - 1 mean they are exactly the same. We ran 10 times so there are 9 RI for each resolution.  There are 10 counts of the number of clusters (one for each iteration). Cluster number too low will not account for the true differences in groups, cluster numbers too high are difficult to annotate.
+# this function does not add the clustering to the seurat object it is to explore and run stats.  If you choose save = output_path then you will save a seurat object with the clustering, one for each kn.
 
 
 ```
@@ -297,8 +193,8 @@ After checking parameters run cluster function to make add the clustering inform
 
 seu <- get_clusters(seu, method = "louvain",
                          df_input = df.input,
-                         k = 60,
-                         resolution = 1,
+                         k = 80,
+                         resolution = c(1),
                          plots = TRUE,
                          save_plots = FALSE)
 # if save_plots is TRUE the feature plots will be save as 13 plots in one file. The UMAP with cluster numbers will also be saved.
@@ -316,9 +212,9 @@ Visualize expression on UMAP and with heat maps
 
 ```{r}
 
-AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
-
-
+AB <- c("TH","CD24","CD56","CD29","CD15","CD184","CD133","SSEA4","CD44","CD49f","CD140a")
+# the cluster labels will match the active ident
+Idents(seu) <- "RNA_snn_res.1"
 # this will let us see one at at time
 for (i in AB) {
   print(FeaturePlot(seu, features = i, min.cutoff = 'q1', max.cutoff = 'q97', label = TRUE))
@@ -327,17 +223,43 @@ for (i in AB) {
 
 ```
 
+Visualize your reference matrix
+
+```{r}
+df <- read.csv("/Users/rhalenathomas/GITHUB/CelltypeR/ExampleOuts/ReferenceMatrixPanel2.csv")
+
+# we need to remove the marker column and add these are row names
+rownames(df) <- df$X
+df <- df %>% select(-"X")
+# heatmap function take a matix
+mat <- as.matrix(df)
+
+heatmap(mat, 
+        Rowv = NA,  # Don't cluster rows
+        Colv = NA,  # Don't cluster columns
+        col = colorRampPalette(c("white", "blue"))(100),  # Define a color palette
+        main = "Reference Matrix")
+
+
+
+```
+
+
+
+
 Some more visualization of expression values
 
 ```{r}
 
 # summary heat map
 # use function plotmean
+# we need to know how many clusters we have.  They will be index 0 to n-1
+# you need to pick the length to annotate
 
 length(unique(seu$RNA_snn_res.1))
-# 12 
+# 15
 # if we want to plot by cluster we need a vector of from 0 to the n-1 clusters
-cluster.num <- c(0:11)
+cluster.num <- c(0:17)
 
 plotmean(plot_type = 'heatmap',seu = seu, group = 'RNA_snn_res.1', markers = AB, 
                      var_names = cluster.num, slot = 'scale.data', xlab = "Cluster",
@@ -346,16 +268,17 @@ plotmean(plot_type = 'heatmap',seu = seu, group = 'RNA_snn_res.1', markers = AB,
 
 ```
 
+Skip for now
+
+
 ```{r}
 # predict cell type from looking at expression patterns
-myann <- c("unknown","glia",
-           "radial glia","neurons1", "radial glia",
-           "astrocytes","radial glia",
-           "astrocytes","neurons2",
-           "NPC","endothelial",
-           "astrocytes")
+myann <- c("precursors","neuralblast","neuron1","astrocyte1","stem-like",
+           "epithelial","astrocyte-early","astrocyte2","DAneuron","RG-astro",
+           "DAneuron2",
+           "Neuron_early","RG","Glia","NPC","OPC","neuralstem","stem-like2")
 
-man.ann <- data.frame(Cluster = c(0:11), MyAnn = myann)
+man.ann <- data.frame(Cluster = c(0:17), MyAnn = myann)
 man.ann
 
 man.ann$Cluster <- as.factor(man.ann$Cluster)
@@ -371,22 +294,29 @@ saveRDS(seu, paste(output_path, "Seurat_temp.RDS", sep = ""))
 
 
 
-Predict cell annotations with CAM (Corralations assignment method)
+Predict cell annotations with CAM (Correlations assignment method)
 
 ```{r}
 
-reference_path <- "/Users/rhalenathomas/GITHUB/CelltypeR/Data/ReferenceMatrix9celltypesOrdered.csv"
+reference_path2 <- "/Users/rhalenathomas/GITHUB/CelltypeR/ExampleOuts/ReferenceMatrixPanel2Timecourse.csv"
+reference_data2 <- read.csv(reference_path)
+# the reference matrix need to be in the format cell types as rows and markers as columns
+# there is a column X with the cell type names
+df1 <- reference_data2
+rownames(df1) <- df1$X
+df1 <- df1 %>% select(-"X")
+df2 <- as.data.frame(t(df1))
+df2$X <- rownames(df2)
 
-reference_data <- read.csv(reference_path)
+input <- read.csv(paste(output_path,"df2000Timecourse4.csv", sep = ""))
+input_df <- input %>% select(c("X",AB,"cell","Sample"))
 
-cor <- find_correlation(test = df.input, 
-                             reference = reference_data, 
+cor <- find_correlation(test = input_df, 
+                             reference = df2, 
                              min_corr = 0.45, 
                              min_diff = 0.05)
 
 # creates a dataframe with cor1 cor2 and predicted cell type label
-
-
 
 ```
 
@@ -395,7 +325,6 @@ Visualize the CAM results
 ```{r}
 
 plot_corr(cor)
-
 
 ```
 
@@ -431,17 +360,12 @@ cor.ann <- get_annotation(seu, seu.cluster = seu$RNA_snn_res.1,
 cor.ann
 dim(cor.ann)
 
-cor.ann <- cor.ann[1:12,]
-dim(cor.ann)
+
 
 unique(cor.ann$CAM)
 length(cor.ann$CAM)
 
 ```
-
-
-
-
 
 Use a trained Random Forest model to predict cell types. 
 Training of the Random Forest model with an annotated data set is below.
@@ -450,20 +374,26 @@ Training of the Random Forest model with an annotated data set is below.
 
 # you must have a saved trained model from a data object annotated from the same markers
 # see the end of the workbook for how to train the model
+# here we don't yet have a trained model, however we can train a model with the known previous annotation using only the overlapping antibodies
+# see below in this workbook I have trained a model using the 9 MO samples annotated on the 9000 cells per sample subset. 
 
-rf <- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/PaperFigures/RFM_trained.11072022.Rds")
+# rf <- readRDS("trained_model")
 
-AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
+
+AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD44", "CD140a")
 
 rfm.pred <- RFM_predict(seu, rf)
 head(rfm.pred)
 
 # add the predictions into the seurat object
+# check the column name for the predictions
 
-seu <- AddMetaData(object=seu, metadata=rfm.pred$rfm.labels, col.name = 'rfm.labels')
+seu <- AddMetaData(object=seu, metadata=rfm.pred$`predict(rf, df)`, col.name = 'rfm.labels')
 
 # check that the data is added 
 table(seu$rfm.labels)
+
+# note these predictions are from the cell type annotatations in the older MOs from 3 genotypes and will only contain those celltypes
 
 
 ```
@@ -476,9 +406,6 @@ rfm.ann <- get_annotation(seu, seu$RNA_snn_res.1,seu$rfm.labels,
                top_n = 3, filter_out = c("unknown","Unknown","Mixed","Mix"), Label = "RFM")
 rfm.ann
 
-#rfm.ann <- get_annotation(seu, seu$RNA_snn_res.0.8,seu$rfm.labels, 
- #              top_n = 3, filter_out = FALSE, Label = "RFM")
-rfm.ann
 dim(rfm.ann)
 
 
@@ -494,6 +421,13 @@ plot_lab_clust(seu, seu.cluster = seu$RNA_snn_res.1, seu.labels = seu$rfm.labels
 
 ```
 
+```{r}
+# save the predictions so far
+saveRDS(seu, paste(output_path, "SeuratSubTimeline.RDS", sep = ""))
+
+```
+
+
 
 
 Predicting cell types with Seurat label transfer using anchors
@@ -505,15 +439,20 @@ Predicting cell types with Seurat label transfer using anchors
 # makes a dataframe with the count of predicted labels for each cluster
 # input seurat object with the predicted labels in the meta data
 # input the clusters meta data slot to be labels
-# input the meta data slot with the labels (correlation, random forest, seurat predicted)
 
 #need reference data object with labels
 seu.r<- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/PaperFigures/Seu9000annot.08072021.RDS")
 
+# now again we are using the subset of the 9 MO samples with annotations.  We will take only the here we can take the expression values as when we made the reference matrix
+# only the proteins in the first panel will exist in this object
 
+proteins <- c("TH","CD24","CD56","CD29","CD15","CD184",
+              "CD133","SSEA4","CD44","CD49f","CD140a")
+
+all <- c(proteins,genes)
 # the output is a seurat object with the predicted annotations
 
-seu <- seurat_predict(seu, seu.r, ref_id = 'subgroups', down.sample = 500, markers = AB)
+seu <- seurat_predict(seu, seu.r, ref_id = 'subgroups', down.sample = 500, markers = all)
 
 
 
@@ -529,8 +468,15 @@ plot_lab_clust(seu, seu$RNA_snn_res.1, seu$seu.pred)
 
 # to not filter anything use c()
 seu.ann <- get_annotation(seu, seu$RNA_snn_res.1,seu$seu.pred, 
-               top_n = 3, filter_out = c(), Label = "Seurat")
+               top_n = 3, filter_out = c("Unknown","Mixed"), Label = "Seurat")
 seu.ann
+
+# some clusters cannot be predicted
+# need to filter the seu.ann table
+
+seu.ann.ft <- seu.ann[!duplicated(as.character(seu.ann$Cluster)), ]
+rownames(seu.ann.ft) <- NULL
+
 
 
 ```
@@ -538,12 +484,11 @@ seu.ann
 Get a consensus of cluster annotations, Add the annotations to the seurat object
 
 
-
 ```{r}
 
 # make a list of data frames
 # all the dataframes need to be as.factor
-ann.list <- list(cor.ann,rfm.ann,seu.ann, man.ann)
+ann.list <- list(cor.ann,rfm.ann,seu.ann.ft, man.ann)
 
 # annotate the seurat object
 
@@ -553,6 +498,9 @@ seu <- cluster_annotate(seu, ann.list = ann.list,
 
 DimPlot(seu, group.by = "CellType")
 
+# unfortunately for the consensus to work we need the cell type names to be identical
+
+
 
 ```
 
@@ -560,9 +508,24 @@ Just use the annotate functions
 
 ```{r}
 
-seu <- annotate(seu, annotations = seu.ann$Seurat, to_label = "RNA_snn_res.1", annotation_name = "SeuratTransfer")
+new_annotations <- c("earlyDA-NPC","earlyGlia","Neurons","Astrocytes1",
+                     "stem-like","epithelial","RG-fetal-astro","Astrocytes2",
+                     "DAneurons","RG-astro","DANPC","Neurons_early",
+                     "epithelialprecursor","Glia", "NPC","OPC","precursors","stem-like-RG"                   )
 
-DimPlot(seu, group.by = "SeuratTransfer")
+seu <- annotate(seu, annotations = new_annotations, to_label = "RNA_snn_res.1", annotation_name = "Celltypes2")
+
+DimPlot(seu, group.by = "Celltypes2", label = TRUE)
+
+combine_types <- c("earlyDA-NPC","earlyGlia","Neurons","Astrocytes",
+                     "stem-like","epithelial","earlyRG","Astrocytes",
+                     "DAneurons","RG","DA-NPC","earlyNeurons",
+                     "epithelial and precursors","Glia","NPC",
+                   "OPC","stem-like","stem-like")
+
+seu <- annotate(seu, annotations = combine_types, to_label = "RNA_snn_res.1", annotation_name = "CelltypesMain")
+
+DimPlot(seu, group.by = "CelltypesMain", label = TRUE)
 
 ```
 
@@ -571,46 +534,37 @@ DimPlot(seu, group.by = "SeuratTransfer")
 We first need to add the variables into the seurat object that we want to compare.
 
 ```{r}
-Genotype <- c("3450","3450","3450","AIW002","AIW002","AIW002","AJG001C","AJG001C","AJG001C")
-ExDate <- c("0306","0317","0317","0306","0317","0317","0306","0317","0317")
-Batch <- c("B","B","A","B","B","A","B","B","A")
-Age <- c("273","284","263","273","284","263","273","284","263")
+# see the sample names and order
 
-# Genotype
-Idents(seu) <- "Sample"
-cluster.ids <- Genotype
+# set the ident to sample names
+Idents(seu) <- 'Sample'
+levels(seu)
+
+Age <- c("150","150","150","150",
+         "30","30","30","30",
+         "60","60","60","60",
+         "100","100","100","100")
+Replicate <- c("R1","R2","R3","R4",
+               "R1","R2","R3","R4",
+               "R1","R2","R3","R4",
+               "R1","R2","R3","R4")
+
+
 # vector with the new names - you need this vector from me
-
-names(cluster.ids) <- levels(seu)    # get the levels
-seu <- RenameIdents(seu, cluster.ids) # rename  
-seu$Genotype <- Idents(seu)   # add a new dataslot
-
-# Experiment date
-Idents(seu) <- "Sample"
-cluster.ids <- ExDate
-# vector with the new names - you need this vector from me
-
-names(cluster.ids) <- levels(seu)    # get the levels
-seu <- RenameIdents(seu, cluster.ids) # rename  
-seu$ExDate <- Idents(seu)   # add a new dataslot
-
-# Batch
-Idents(seu) <- "Sample"
-cluster.ids <- Batch
-# vector with the new names - you need this vector from me
-
-names(cluster.ids) <- levels(seu)    # get the levels
-seu <- RenameIdents(seu, cluster.ids) # rename  
-seu$Batch <- Idents(seu)   # add a new dataslot
-
-# days in final differentiation media
-Idents(seu) <- "Sample"
 cluster.ids <- Age
+
+names(cluster.ids) <- levels(seu)    # get the levels
+seu <- RenameIdents(seu, cluster.ids) # rename  
+seu$Days_in_FD <- Idents(seu)   # add a new dataslot
+
+# Replicate
+Idents(seu) <- "Sample"
+cluster.ids <- Replicate
 # vector with the new names - you need this vector from me
 
 names(cluster.ids) <- levels(seu)    # get the levels
 seu <- RenameIdents(seu, cluster.ids) # rename  
-seu$DaysinCulture <- Idents(seu)   # add a new dataslot
+seu$Replicate <- Idents(seu)   # add a new dataslot
 
 
 
@@ -620,7 +574,7 @@ Plots some variables to look for differences between groups
 
 ```{r}
 # one plot
-proportionplots(seu.q,seu.var = seu$Genotype, seu.lable = seu$CellType, groups = "Genotype")
+proportionplots(seu.q,seu.var = seu$Days_in_FD, seu.lable = seu$CelltypesMain, groups = "Days_in_FD")
 # add colours
 colours <- c("chocolate1","chocolate3","orange",
                    "lightsalmon", "pink","lightpink3",
@@ -629,19 +583,11 @@ colours <- c("chocolate1","chocolate3","orange",
                    "seagreen3","tomato4","burlywood3","grey90","brown",
              "royalblue3", "tan4","yellowgreen")
 
-proportionplots(seu.q,seu.var = seu$Genotype, seu.lable = seu$CellType, groups = "Genotype", my_colours = colours)
+# same thing with custom colours
+proportionplots(seu.q,seu.var = seu$Days_in_FD, seu.lable = seu$CelltypesMain, groups = "Days_in_FD", my_colours = colours)
 
-```
-
-```{r}
-var.list <- list(seu$DaysinCulture,seu$Batch,seu$ExDate,seu$Genotype)
-varnames <- c("Days in Culture", "Batch", "Experiment Date", "Genotype")
-# plot all the variables of interest at once
-
-plotproportions(seu, var.list = var.list, xgroup = seu$CellType, varnames = varnames, my_colours = c("blue","red"))
-
-
-
+# now check with more distinctive cell types
+proportionplots(seu.q,seu.var = seu$Days_in_FD, seu.lable = seu$Celltypes2, groups = "Days_in_FD", my_colours = colours)
 
 ```
 
@@ -649,12 +595,14 @@ Make a heat map
 
 ```{r}
 
-# make sure the order is correct and there are only the amount of different cell types.  The order can be found in the dimplot above 
+# make sure the order is correct and there are only the amount of different cell types.  The order can be found in the dimplot above or check the levels
+Idents(seu) <- "CelltypesMain"
+levels(seu)
+var_names <- c("earlyDA-NPC","earlyGlia","Neurons","Astrocytes","stem-like",
+"epithelial","earlyRG","DAneurons", "RG", "DA-NPC","earlyNeurons",
+"epithelial and precursors","Glia", "NPC","OPC")
 
-var_names <- c("unknown","astrocyte","epithelial","neurons 1",
-               "endothelial", "npc","astrocytes")
-
-plotmean(plot_type = 'heatmap',seu = seu, group = 'CellType', markers = AB, 
+plotmean(plot_type = 'heatmap',seu = seu, group = 'CelltypesMain', markers = AB, 
                      var_names = var_names, slot = 'scale.data', xlab = "Cell Type",
          ylab = "Antibody")
 
@@ -667,26 +615,98 @@ plotmean(plot_type = 'heatmap',seu = seu, group = 'CellType', markers = AB,
 
 ```{r}
 # dot plot
-var_names <- c("unknown","astrocyte","epithelial","neurons 1",
-               "endothelial", "npc","astrocytes")
+var_names <- c("earlyDA-NPC","earlyGlia","Neurons","Astrocytes","stem-like",
+"epithelial","earlyRG","DAneurons", "RG", "DA-NPC","earlyNeurons",
+"epithelial and precursors","Glia", "NPC","OPC")
 
 
 # make sure the terms are exactly the same and you don't miss any
-new.order <- c("astrocyte","astrocytes","endothelial","epithelial","neurons 1",
-               "npc","unknown")
+new.order <- c("stem-like","epithelial and precursors",
+               "earlyDA-NPC","earlyGlia","earlyRG","OPC","NPC","DA-NPC",
+               "earlyNeurons","Neurons","DAneurons","epithelial","Astrocytes","Glia","RG"
+               )
 new.order <- rev(new.order)
 
-AB.order <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
+AB.order <- c("TH","CD24","CD56","CD29","CD15","CD184",
+              "CD133","SSEA4","CD44","CD49f","CD140a")
 
-plotmean(plot_type = 'dotplot',seu = seu, group = 'CellType', markers = AB, 
+plotmean(plot_type = 'dotplot',seu = seu, group = 'CelltypesMain', markers = AB, 
                      var_names = var_names, slot = 'scale.data', xlab = "Cell Type",
          ylab = "Antibody", var1order = new.order, var2order = AB.order)
 
 
 ```
 
-# Statistics comparing groups
+Look at some things across time
 
+```{r}
+
+table(seu$Celltypes2,seu$Days_in_FD)
+
+```
+
+New cell type names based on if cell types are changing the same over time
+
+```{r}
+
+combine_types <- c("earlyDA-NPC","earlyGlia","Neurons","Astrocytes",
+                     "stem-like","epithelial","earlyRG","Astrocytes",
+                     "DAneurons","RG-astro","DA-NPC","earlyNeurons",
+                     "epithelial-endothelial","Glia","NPC",
+                   "OPC","epithelial-maybeOligo","glia-maybeOligo")
+
+seu <- annotate(seu, annotations = combine_types, to_label = "RNA_snn_res.1", annotation_name = "CellTypes")
+
+DimPlot(seu, group.by = "CellTypes", label = TRUE, repel = TRUE)
+
+
+
+```
+
+Save the Seurat object
+
+```{r}
+saveRDS(seu, paste(output_path, "SeuratSubTimeline.RDS", sep = ""))
+
+```
+
+Train the Random Forest model
+
+```{r}
+
+# use Revised Celltype
+# use all Markers
+
+rf <- RFM_train(seurate_object = seu, 
+                             AB_list = AB, 
+                annotations = seu$CellTypes,
+                      split = c(0.8,0.2),
+                      downsample = 1000,
+                      seed = 222,
+                      mytry = c(1:10),
+                      maxnodes = c(12: 25),
+                      trees = c(250, 500, 1000,2000),
+                      start_node = 15)
+
+saveRDS(rf, paste(output_path,"trainedRFMfromTimeCourseSub.Rds",sep =""))
+
+```
+
+Now I will use the full dataset
+The cell types will be more clear with the full data set.
+
+
+```{r}
+
+
+```
+
+
+
+
+
+
+# Statistics comparing groups
 
 
 ```{r}
@@ -704,8 +724,8 @@ colnames(seu@meta.data)
 
 ```{r}
 # run the function
-
-var.names <- c("Sample","DaysinCulture", "Batch", "ExDate", "Genotype", "CellType")
+# put all things you might want to use as variables in var names, including the cell type groups
+var.names <- c("Days_in_FD","Sample","Replicate","CelltypesMain")
 
 df.for.stats <- Prep_for_stats(seu, marker_list = AB, variables = var.names, 
                                marker_name = 'Marker')
@@ -720,7 +740,7 @@ head(df.for.stats)
 ```
 
 
-First we have 3 variables: Experimental variable, Cell types, Markers
+First we have 3 variables: Experimental variable (Days in culture), Cell types, Markers
 We want to compare the mean expression per group:
 For all antibodies together in each cell type between a given variable (Genotype) (One way anova)
 We want to compare each antibody separately for a given variable for each cell type (two way anova)
@@ -741,11 +761,11 @@ We want to compare each antibody separately for a given variable for each cell t
 # we run one-way here with different conditions
 
 # compare genotypes for each cell type
-test.stats1 <- run_stats(input_df= df.for.stats, group_cols = c("Sample", "CellType","Marker","Genotype","Batch"),
+test.stats1 <- run_stats(input_df= df.for.stats, group_cols = c("Sample", "CelltypesMain","Marker","Days_in_FD","Replicate"),
                      value_col = "value",
-                     stat_type = "ANOVA", id1 = 'Genotype', 
+                     stat_type = "ANOVA", id1 = 'Days_in_FD', 
                      id2 = NULL, use_means = TRUE,
-                     loop_by = "CellType")
+                     loop_by = "CelltypesMain")
 
 # see the dataframe results
 test.stats1[['ANOVA']]
@@ -754,26 +774,23 @@ test.stats1[['TukeyHSD']]
 
 
 ```
+Overall effect we can see a significant effect of Days in culture on cell types
+In pair wise conparisons only 30 vs 100 days is dfferent.
+
+
 
 ```{r}
 # Compare expression across cell types for each marker
-test.stats2 <- run_stats(input_df= df.for.stats, group_cols = c("Sample", "CellType","Marker","Genotype","Batch"),
+test.stats2 <- run_stats(input_df= df.for.stats, group_cols = c("Sample", "CelltypesMain","Marker","Days_in_FD"),
                      value_col = "value",
-                     stat_type = "ANOVA", id1 = 'Genotype', 
+                     stat_type = "ANOVA", id1 = 'Days_in_FD', 
                      id2 = NULL, use_means = TRUE,
                      loop_by = "Marker")
 test.stats2[['TukeyHSD']]
+
+
 ```
 
-```{r}
-# compare Genotypes across all cell types and markers
-test.stats3 <- run_stats(input_df= df.for.stats, group_cols = c("Sample", "CellType","Marker"),
-                     value_col = "value",
-                     stat_type = "ANOVA", id1 = 'Genotype', 
-                     id2 = NULL, use_means = TRUE,
-                     loop_by = 'none')
-test.stats3[['TukeyHSD']]
-```
 
 ```{r}
 # compare genotype for each cell type without taking the group means and using each cell as an n (not good practice)
@@ -792,9 +809,9 @@ Test two way ANOVAs
 
 ```{r}
 
-test.stats5 <- run_stats(input_df= df.for.stats, group_cols = c("Sample", "CellType","Marker","Genotype","Batch"),
+test.stats5 <- run_stats(input_df= df.for.stats, group_cols = c("Sample", "CelltypesMain","Days_in_FD","Marker"),
                      value_col = "value",
-                     stat_type = "ANOVA2", id1 = 'Genotype', 
+                     stat_type = "ANOVA2", id1 = 'Days_in_FD', 
                      id2 = "Marker", use_means = TRUE,
                      loop_by = "CellType")
 
@@ -853,8 +870,17 @@ Run in HPC with lots of cells
 
 ```{r}
 
-rf <- RFM_train(seurate_object = seu, 
-                             AB_list = AB, annotations = seu$CellType,
+# we need a labelled object 
+# here we will train a model with the 3 cell lines samples to apply to the time line samples using only the overlapping antibodies.
+seu.r<- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/PaperFigures/Seu9000annot.08072021.RDS")
+
+overlapMarkers <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD44", "CD140a")
+# check where the labels are in the seurat object 
+colnames(seu.r@meta.data)
+
+rf <- RFM_train(seurate_object = seu.r, 
+                             AB_list = overlapMarkers, 
+                annotations = seu.r$subgroups,
                       split = c(0.8,0.2),
                       downsample = "none",
                       seed = 222,
@@ -863,7 +889,8 @@ rf <- RFM_train(seurate_object = seu,
                       trees = c(250, 500, 1000,2000),
                       start_node = 15)
 
-#save(rf, output_path,"trainedRFM.Rds")
+saveRDS(rf, paste(output_path,"trainedRFMfrom9MOsubsetOverlapPanel.Rds",sep =""))
+
 
 ```
 
